Introduce openccjava